# mof-guest-toolkit

./: .gitignore  README.md  cheminformatics_examples.md  environment.yml  examples.md  my_results.csv  pyproject.toml
mof_toolkit/: __init__.py  molecule_manager.py  pubchem.py  rdkit_descriptors.py  rdkit_properties.py
mof_toolkit/templates/: viewer.html
tests/data/: molecules_example.csv
