[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "mof-guest-toolkit"
version = "0.1.0"
description = "Helper tools for MOF-guest computational chemistry workflows"
requires-python = ">=3.10"
dependencies = [
    "rdkit>=2022.09",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "requests>=2.28",
    "pubchempy>=1.0.4",
    "flask>=3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mof_toolkit*"]

[project.scripts]
pubchem_interactive  = "mof_toolkit.rdkit_descriptors:pubchem_interactive_cli"
rdkit_check_descrpt     = "mof_toolkit.rdkit_descriptors:rdkit_check_descrpt_cli"
rdkit_default_descrpts  = "mof_toolkit.rdkit_descriptors:rdkit_default_descrpts_cli"
rdkit_batch_fetcher  = "mof_toolkit.rdkit_descriptors:rdkit_batch_fetcher_cli"
fetch_xyz_batch      = "mof_toolkit.rdkit_descriptors:fetch_xyz_batch_cli"
smiles_to_3d         = "mof_toolkit.molecule_manager:smiles_to_3d_cli"

# Future modules (uncomment as you implement them)
# get_cif_ccdc        = "mof_toolkit.ccdc:get_cif_ccdc_cli"
# extract_geom        = "mof_toolkit.geometry_opt:extract_geom_cli"
# analyze_modes       = "mof_toolkit.normal_modes:analyze_modes_cli"
# check_bonding       = "mof_toolkit.bonding:check_bonding_cli"
