[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "mof-guest-toolkit"
version = "0.2.0"
description = "Helper tools for MOF-guest computational chemistry workflows"
requires-python = ">=3.10"
dependencies = [
    "rdkit>=2022.09",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "requests>=2.28",
    "pubchempy>=1.0.4",
    "flask>=3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mof_toolkit*"]

[tool.setuptools.package-data]
mof_toolkit = [
    "static/figures/*.png",
    "templates/*.html",
]

# ---------------------------------------------------------------------------
# CLI entry points
# ---------------------------------------------------------------------------
[project.scripts]
# Interactive web viewer (Flask + 3Dmol.js)
interactive_explorer  = "mof_toolkit.rdkit_descriptors:interactive_explorer_cli"

# Compound resolution + descriptor computation
mol_explorer          = "mof_toolkit.rdkit_descriptors:mol_explorer_cli"

# 3D structure file generation and format conversion
mol_get_xyz           = "mof_toolkit.molecule_manager:mol_get_xyz_cli"
mol_file_translate    = "mof_toolkit.molecule_manager:mol_file_translate_cli"

# Future modules (uncomment as implemented)
# get_cif_ccdc   = "mof_toolkit.ccdc:get_cif_ccdc_cli"
# extract_geom   = "mof_toolkit.geometry_opt:extract_geom_cli"
# analyze_modes  = "mof_toolkit.normal_modes:analyze_modes_cli"
# check_bonding  = "mof_toolkit.bonding:check_bonding_cli"